change breakpoints and urls

--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -115,7 +115,7 @@
                 </action>-->
                 <action method="addLink" translate="label title">
                     <label>Checkout</label>
-                    <url>/checkout</url>
+                    <url>/checkout/onepage</url>
                     <title>Checkout</title>
                     <prepare/>
                     <urlParams/>
