--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -112,12 +112,11 @@ $breakpoints: (
         small: 0,
         medium: 640px,
         large: 1024px,
-        xlarge: 1200px,
-        xxlarge: 1440px,
-        xxxlarge: 1920px
+        xlarge: 1440px,
+        xxlarge: 2560px
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
