change font awesome icons

--- a/app/design/frontend/foundation/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list/toolbar.phtml
@@ -39,11 +39,11 @@
                 <?php if ($this->getCurrentDirection() == 'desc'): ?>
                     <span class="input-group-label"><a href="<?php echo $this->getOrderUrl(null, 'asc') ?>"
                                                        title="<?php echo $this->__('Set Ascending Direction') ?>"><i
-                                class="fa fa-long-arrow-down"></i></a></span>
+                                class="fas fa-long-arrow-alt-down"></i></a></span>
                 <?php else: ?>
                     <span class="input-group-label"><a href="<?php echo $this->getOrderUrl(null, 'desc') ?>"
                                                        title="<?php echo $this->__('Set Descending Direction') ?>"><i
-                                class="fa fa-long-arrow-up"></i></a></span>
+                                class="fas fa-long-arrow-alt-up"></i></a></span>
                 <?php endif; ?>
             </div>
         </div>
