--- a/app/design/frontend/foundation/default/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/payment.phtml
@@ -54,7 +54,7 @@
     <button type="button" class="button payment_save"><?php echo $this->__('Continue') ?></button>
     <div class="please-wait" id="payment-please-wait" style="display:none;">
         <div class="centered">
-            <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
+            <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
         </div>
     </div>
 </div>
