--- a/app/design/frontend/foundation/default/template/checkout/onepage/shipping_method.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/shipping_method.phtml
@@ -41,7 +41,7 @@
         <button type="button" class="button" onclick="shippingMethod.save()"><span><span><?php echo $this->__('Continue') ?></span></span></button>
         <div id="shipping-method-please-wait" class="please-wait" style="display:none;">
             <div class="centered">
-                <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
+                <i class="fas fa-circle-notch fa-spin fa-3x fa-fw margin-bottom"></i>
             </div>
         </div>
     </div>
