--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -158,6 +158,7 @@
         <reference name="before_body_end">
             <block type="core/template" name="safershopping" template="page/html/safershopping.phtml"/>
             <block type="core/template" name="reasons" template="foundation/reasons.phtml"/>
+            <block type="core/template" name="spinner" template="page/html/ajax-spinner.phtml"/>
         </reference>
 
     </default>
