--- a/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
@@ -76,7 +76,7 @@
         <?php echo $this->getChildHtml('button') ?>
         <div class="please-wait" id="review-please-wait" style="display:none;">
             <div class="centered">
-                <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
+                <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
             </div>
         </div>
     </div>
