--- a/app/design/frontend/foundation/default/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/shipping.phtml
@@ -177,7 +177,7 @@
                 title="<?php echo Mage::helper('core')->quoteEscape($this->__('Continue')) ?>"><?php echo $this->__('Continue') ?></button>
         <div id="shipping-please-wait" class="please-wait" style="display:none;">
             <div class="centered">
-                <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
+                <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
             </div>
         </div>
     </div>
