--- a/app/design/frontend/foundation/default/template/persistent/checkout/onepage/billing.phtml
+++ b/app/design/frontend/foundation/default/template/persistent/checkout/onepage/billing.phtml
@@ -248,9 +248,9 @@
     <div class="buttons-set" id="billing-buttons-container">
         <button type="button" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Continue')) ?>"
                 class="button billing_save"><?php echo $this->__('Continue') ?></button>
-        <div class="please-wait" id="billing-please-wait" style="display:none;">
+        <div id="billing-please-wait" class="please-wait" style="display:none;">
             <div class="centered">
-                <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw margin-bottom"></i>
+                <i class="fas fa-circle-notch fa-spin fa-3x fa-fw"></i>
             </div>
         </div>
     </div>
