--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -172,7 +172,7 @@
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' =>'zahlungsarten#paypal')); ?>">
                         <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/payments/paypal-white.png' ?>"
-                             alt="PayPal Logo">
+                             alt="PayPal Logo"/>
                     </a>
                 </li>
                 <li>
