--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -35,7 +35,7 @@
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/logo.png'); ?>"
                      alt="<?php echo $this->getLogoAlt() ?>"/>
             </a>
-            <span class="slogan">Großküchen- & Kühltechnik</span>
+            <span class="slogan">Großküchen- &amp; Kühltechnik</span>
         </div>
         <div class="trusted">
             <ul class="menu">
