--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cookielaw.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cookielaw.scss
@@ -1,4 +1,4 @@
-.notice-cookie {
+#cookie-law {
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -7,16 +7,14 @@
   background: rgba(255, 255, 255, 0.8) !important;
   color: $primary-color;
   border-top: 1px solid $primary-color;
-  .notice-inner {
-    margin: .4rem;
+  p {
     text-align: center;
     float: none;
-    p {
-      font-size: rem-calc(10);
-      margin-bottom: 0;
+    font-size: rem-calc(10);
+    margin-bottom: 0;
+    a {
+      @extend .button, .tiny, .hollow;
+      margin: .2rem 0;
     }
-  }
-  .actions button {
-    margin: 0;
   }
 }
