--- a/app/design/frontend/foundation/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list/toolbar.phtml
@@ -16,7 +16,7 @@
             <select onchange="setLocation(this.value)" class="input-group-field">
                 <?php foreach ($this->getAvailableLimit() as $_key => $_limit): ?>
                     <option
-                        value="<?php echo $this->getLimitUrl($_key) ?>"<?php if ($this->isLimitCurrent($_key)): ?> selected="selected"<?php endif ?>>
+                        value="<?php echo rawurldecode($this->getLimitUrl($_key)) ?>"<?php if ($this->isLimitCurrent($_key)): ?> selected="selected"<?php endif ?>>
                         <?php echo $_limit ?>
                     </option>
                 <?php endforeach; ?>
@@ -31,17 +31,17 @@
                 <select onchange="setLocation(this.value)" class="input-group-field">
                     <?php foreach ($this->getAvailableOrders() as $_key => $_order): ?>
                         <option
-                            value="<?php echo $this->getOrderUrl($_key, 'asc') ?>"<?php if ($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
+                            value="<?php echo rawurldecode($this->getOrderUrl($_key, 'asc')) ?>"<?php if ($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif; ?>>
                             <?php echo $this->__($_order) ?>
                         </option>
                     <?php endforeach; ?>
                 </select>
                 <?php if ($this->getCurrentDirection() == 'desc'): ?>
-                    <span class="input-group-label"><a href="<?php echo $this->getOrderUrl(null, 'asc') ?>"
+                    <span class="input-group-label"><a href="<?php echo rawurldecode($this->getOrderUrl(null, 'asc')) ?>"
                                                        title="<?php echo $this->__('Set Ascending Direction') ?>"><i
                                 class="fas fa-long-arrow-alt-down"></i></a></span>
                 <?php else: ?>
-                    <span class="input-group-label"><a href="<?php echo $this->getOrderUrl(null, 'desc') ?>"
+                    <span class="input-group-label"><a href="<?php echo rawurldecode($this->getOrderUrl(null, 'desc')) ?>"
                                                        title="<?php echo $this->__('Set Descending Direction') ?>"><i
                                 class="fas fa-long-arrow-alt-up"></i></a></span>
                 <?php endif; ?>
