--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -2,7 +2,7 @@
     <div class="footer-top">
         <a href="#nav-top" id="backtotop">
             <div class="backtotop">
-                <span class="navFooterBackToTopText"><?php echo $this->__('Zurück zum Seitenanfang') ?></span>
+                <span class="navFooterBackToTopText"><?php echo $this->__('Zur&uuml;ck zum Seitenanfang') ?></span>
             </div>
         </a>
     </div>
@@ -91,13 +91,13 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'contacts')); ?>"><?php echo $this->__('Kontakt') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'wir-planen-gastro-kuechen')); ?>"><?php echo $this->__('Küchenplanung') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'wir-planen-gastro-kuechen')); ?>"><?php echo $this->__('K&uuml;chenplanung') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leistungen')); ?>"><?php echo $this->__('Leistungen') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'digitale-kueche-smart-kitchen')); ?>"><?php echo $this->__('Digitale Küche') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'digitale-kueche-smart-kitchen')); ?>"><?php echo $this->__('Digitale K&uuml;che') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'altgeraeteentsorgung')); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a>
@@ -138,7 +138,9 @@
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/vaihinger-sanomat')); ?>"><?php echo $this->__('Sanomat') ?></a>
                     </li>
-
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/seltmann-weiden')); ?>"><?php echo $this->__('Seltmann Weiden') ?></a>
+                    </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller')); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
                     </li>
@@ -148,10 +150,10 @@
                 <p><?php echo $this->__('Beliebte Gastro-Artikel') ?></p>
                 <ul>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/kombidaempfer')); ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/rational/kombidaempfer')); ?>"><?php echo $this->__('Rational Kombid&auml;mpfer') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter/geschirrspuelmaschinen')); ?>"><?php echo $this->__('Winterhalter Geschirrspülmaschinen') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter/geschirrspuelmaschinen')); ?>"><?php echo $this->__('Winterhalter Geschirrsp&uuml;lmaschinen') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/jura/kaffeevollautomaten')); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
@@ -161,6 +163,18 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/bartscher/thermik/salamander')); ?>"><?php echo $this->__('Bartscher Salamander') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/piazza-doro')); ?>"><?php echo $this->__('Piazza D\'oro Espresso') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/hupfer/servierwagen')); ?>"><?php echo $this->__('Hupfer Servierwagen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/chromonorm')); ?>"><?php echo $this->__('ChromoNorm Edelstahlm&ouml;bel') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/nordcap/kuehlschraenke')); ?>"><?php echo $this->__('NordCap K&uuml;hlschr&auml;nke') ?></a>
                     </li>
                 </ul>
             </div>
@@ -219,6 +233,9 @@
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' =>'datenschutz')); ?>"><?php echo $this->__('Datenschutz') ?></a>
+                </li>
+                <li>
+                    <a href="<?php echo Mage::getUrl('', array('_direct' =>'sitemap')); ?>"><?php echo $this->__('Sitemap') ?></a>
                 </li>
             </ul>
         </div>
